# DeselbyStd

./: CMakeLists.txt  README.md
include/: random.h  runtimetupleutils.h  stlstream.h  typeutils.h
includecpp17/: stlstream.h  traits.h
test/: main.cpp
